--- a/assets/scss/5-pages/sports/_sports.scss
+++ b/assets/scss/5-pages/sports/_sports.scss
@@ -3,11 +3,11 @@
 }
 
 .sports-caption {
-  max-width: 400px;
+  background-color: #fff;
   margin: 0 auto;
+  max-width: 400px;
   padding: 25px;
   text-align: center;
-  background-color: #fff
 }
 
 .sports-blurb {
