--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,38 +1,38 @@
 /* Variables */
-@import "0-tools/vars";
+@import '0-tools/vars';
 
 /* Base items */
-@import "1-base/typography";
-@import "1-base/links";
+@import '1-base/typography';
+@import '1-base/links';
 
 /* Modular components */
-@import "3-modules/mega-nav";
-@import "3-modules/global-nav";
-@import "3-modules/sliders";
-@import "3-modules/footer";
-@import "3-modules/hero-banner";
-@import "3-modules/img-hover";
-@import "3-modules/sub-nav";
-@import "3-modules/roster";
-@import "3-modules/schedule-page";
+@import '3-modules/mega-nav';
+@import '3-modules/global-nav';
+@import '3-modules/sliders';
+@import '3-modules/footer';
+@import '3-modules/hero-banner';
+@import '3-modules/img-hover';
+@import '3-modules/sub-nav';
+@import '3-modules/roster';
+@import '3-modules/schedule-page';
 
 /* Layout items */
 // @import "4-layout/header";
-@import "4-layout/positioning";
-@import "4-layout/banners";
+@import '4-layout/positioning';
+@import '4-layout/banners';
 
 /* Page specific styling */
 /* Home/index page */
-@import "5-pages/index/home";
-@import "5-pages/index/schedule";
-@import "5-pages/index/videos";
+@import '5-pages/index/home';
+@import '5-pages/index/schedule';
+@import '5-pages/index/videos';
 /* Sports page */
-@import "5-pages/sports/sports";
+@import '5-pages/sports/sports';
 /* Baseball page */
-@import "5-pages/baseball/coaches";
-@import "5-pages/baseball/modals";
+@import '5-pages/baseball/coaches';
+@import '5-pages/baseball/modals';
 /* Facilities page */
-@import "5-pages/facilities/facilities";
+@import '5-pages/facilities/facilities';
 /* Sports facilities */
-@import "5-pages/sports-facilities/sports-facilities";
-@import "5-pages/recruitment/recruitment";
+@import '5-pages/sports-facilities/sports-facilities';
+@import '5-pages/recruitment/recruitment';
