--- a/assets/scss/3-modules/_global-nav.scss
+++ b/assets/scss/3-modules/_global-nav.scss
@@ -1,5 +1,6 @@
 .global-nav {
   background-color: $primary-red;
+  height: 56px;
   margin-left: 0;
   margin-right: 0;
   max-width: 100%;
@@ -8,7 +9,6 @@
   padding-left: 5%;
   padding-top: 15px;
   width: 100%;
-  height: 56px;
   z-index: 1031;
 }
 
@@ -21,8 +21,8 @@
 }
 
 .kcc-logo {
+  margin-left: -5px;
   width: 190px;
-  margin-left: -5px
 }
 
 @media screen and (min-width: 360px) {
@@ -45,15 +45,15 @@
 
 @media screen and (min-width: 992px) and (max-width: 1100px) {
   .kcc-logo {
-    width: 310px;
     margin-left: -25px;
+    width: 310px;
   }
 }
 
 @media screen and (min-width: 1100px) {
   .kcc-logo {
-    width: 340px;
     margin-left: -25px;
+    width: 340px;
   }
 }
 
@@ -71,11 +71,11 @@
 }
 
 .clearSearch {
-  padding-top: 72px;
   background-position: center 72px;
+  padding-top: 72px;
 }
 
 .search-row {
-  background-color: green;
+  background-color: #008000;
   height: 46px;
 }
