--- a/assets/scss/3-modules/_mega-nav.scss
+++ b/assets/scss/3-modules/_mega-nav.scss
@@ -15,9 +15,9 @@
     background-position: center top;
     background-repeat: no-repeat;
     background-size: 3840px 271px;
+    height: 251px;
     margin-top: 0;
     min-height: 251px;
-    height: 251px;
     pointer-events: none;
     z-index: 1030;
   }
@@ -25,17 +25,17 @@
 
 @media screen and (min-width:992px) {
   .navbar-nav {
-  margin-top: -100px
+    margin-top: -100px;
   }
 }
 /* adds some margin below the link sets  */
 .navbar .dropdown-menu div[class*="col"] {
-   margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .navbar .dropdown-menu {
-  border:none;
   background-color: #f5f6f8 !important;
+  border: none;
   margin-left: auto;
   margin-right: auto;
   margin-top: 60px;
@@ -46,13 +46,13 @@
 
     /* remove the padding from the navbar so the dropdown hover state is not broken */
   .navbar {
-    padding-bottom:0px;
+    padding-bottom: 0;
   }
 
   /* remove the padding from the nav-item and add some margin to give some breathing room on hovers */
   .navbar .nav-item {
-    padding:.5rem .5rem;
-    margin:0 .25rem;
+    margin: 0 .25rem;
+    padding: .5rem .5rem;
   }
 
 @media screen and (min-width: 992px) {
@@ -64,42 +64,42 @@
 
   /* makes the dropdown full width  */
   .navbar .dropdown {
-    position:static;
+    position: static;
   }
 
   .navbar .dropdown-menu {
     border: none;
-    left:0;
-    right:0;
+    left: 0;
+    right: 0;
   /*  height of nav-item  */
-    top:50px;
-    width:90%;
+    top: 50px;
+    width: 90%;
   }
 
   @-webkit-keyframes meganav {
-    0%  {opacity: 0;}
-    100%  {opacity: 1;}
+    0% {opacity: 0;}
+    100% {opacity: 1;}
   }
   @keyframes meganav {
-    0%  {opacity: 0;}
-    100%  {opacity: 1;}
+    0% {opacity: 0;}
+    100% {opacity: 1;}
   }
 }
 
   /* shows the dropdown menu on hover */
 @media screen and (min-width: 992px) {
   .navbar .dropdown:hover .dropdown-menu, .navbar .dropdown .dropdown-menu:hover {
-    display:block!important;
-    -webkit-animation-name: meganav;
     -webkit-animation-duration: .6s;
-    animation-name: meganav;
     animation-duration: .6s;
+    -webkit-animation-name: meganav;
+    animation-name: meganav;
+    display: block !important;
   }
 }
 
 .dropdown:hover, .dropdown:hover a.nav-link {
-  color: $primary-blue !important;
   background-color: #f5f6f8;
+  color: $primary-blue !important;
 }
 
 @media screen and (min-width: 992px) {
@@ -132,8 +132,8 @@
 }
 
 .nav-img {
-  margin-top: 20px;
   margin-left: -10px;
+  margin-top: 20px;
 }
 
 @media screen and (min-width: 1100px) {
@@ -229,14 +229,14 @@
 
 // Don't display the dropdown carrots for menu items
 .dropdown-toggle::after {
-    display:none
+  display: none;
 }
 
 @media screen and (min-width: 992px) {
   .clickable {
-    pointer-events: auto;
     margin-left: auto;
     margin-right: auto;
+    pointer-events: auto;
   }
 }
 
