--- a/assets/scss/5-pages/baseball/_coaches.scss
+++ b/assets/scss/5-pages/baseball/_coaches.scss
@@ -4,15 +4,15 @@
 }
 
 .coach-img {
+  border-color: #fff;
   border-style: solid;
-  border-color: white;
   border-width: 5px;
   width: 300px;
 }
 
 .coach-modal-img {
-  border-style: solid;
   border-color: $primary-red;
+  border-style: solid;
   border-width: 5px;
   margin-right: 20px;
   width: 300px;
