--- a/assets/scss/5-pages/index/_home.scss
+++ b/assets/scss/5-pages/index/_home.scss
@@ -36,7 +36,7 @@
 }
 
 .news-scroll {
-  background-color: white;
+  background-color: #fff;
   height: 488px;
   margin-right: -15px;
   max-height: 488px;
