--- a/assets/scss/5-pages/index/_schedule.scss
+++ b/assets/scss/5-pages/index/_schedule.scss
@@ -3,10 +3,10 @@
 }
 
 .games {
-  // background-color: white;
-  width: 100%;
-  margin: 0 auto;
+  // background-color: #fff;
   display: block;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .slick.slide {
@@ -15,48 +15,50 @@
 }
 
 .schedule-carousel__sport {
- color: #666673;
   border-bottom: 1px solid #666673;
- font-weight: bold;
- font-size: 15px;
- overflow: hidden;
+  color: #666673;
+  font-size: 15px;
+  font-weight: bold;
+  max-width: 60%;
+  overflow: hidden;
+  text-overflow: ellipsis;
   text-transform: uppercase;
- text-overflow: ellipsis;
- white-space: nowrap;
- max-width: 60%;
+  white-space: nowrap;
 }
 
 .schedule-carousel__sport-icon {
   color: #c61f48;
 }
 
-.schedule-carousel__date-blue{
+.schedule-carousel__date-blue {
   background-color: #0f3b63;
   color: #ffffff;
   float: left;
   height: 120px;
-  width: auto;
-  Text-align: center;
+  line-height: 1;
   margin-right: 10px;
   padding: 5px;
-  line-height: 1;
+  text-align: center;
+  width: auto;
 }
-.schedule-carousel__date-red{
+
+.schedule-carousel__date-red {
   background-color: #c61f48;
   color: #ffffff;
   float: left;
   height: 120px;
-  width: auto;
-  Text-align: center;
+  line-height: 1;
   margin-right: 10px;
   padding: 5px;
-  line-height: 1;
+  text-align: center;
+  width: auto;
 }
 
-.schedule-carousel__date-month{
-  margin-bottom: 0;
+.schedule-carousel__date-month {
   font-size: 1.1em;
+  margin-bottom: 0;
 }
-.schedule-carousel__date-day{
+
+.schedule-carousel__date-day {
   font-size: 2em;
 }
