--- a/assets/scss/5-pages/index/_videos.scss
+++ b/assets/scss/5-pages/index/_videos.scss
@@ -6,11 +6,11 @@
 }
 
 #yt_list {
- height: 260px;
- top: 0;
- right: 0;
- list-style: none;
- margin-bottom: 10px;
+  height: 260px;
+  list-style: none;
+  margin-bottom: 10px;
+  right: 0;
+  top: 0;
 }
 
 @media screen and (min-width: 375px) {
@@ -51,21 +51,22 @@
 }
 
 #yt_list_bb {
- height: 290px;
- top: 0;
- right: 0;
- list-style: none;
- margin-bottom: 10px;
+  height: 290px;
+  list-style: none;
+  margin-bottom: 10px;
+  right: 0;
+  top: 0;
 }
+
 .item {
- background: #fff;
- box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
- height: auto;
- width: 300px;
- float: left;
- padding: 15px;
- margin: 10px;
- min-height: 0;
+  background: #fff;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  float: left;
+  height: auto;
+  margin: 10px;
+  min-height: 0;
+  padding: 15px;
+  width: 300px;
 }
 
 @media screen and (min-width: 992px) {
@@ -81,63 +82,70 @@
 }
 
 .item > a > img {
- width: 100%;
+  width: 100%;
 }
+
 .item:hover {
- box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 }
+
 .video-details {
- font-size: 18px;
+  font-size: 18px;
 }
 
 .video-carousel__title {
-	color: #c61f48;
-	font-size: 17px;
-	font-weight: bold;
+  color: #c61f48;
+  font-size: 17px;
+  font-weight: bold;
   padding-top: 10px;
 }
 
 div#channel_input > input#user_name.error {
- color: #d33;
- border-color: #d33;
- text-decoration: line-through;
- background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.5);
+  border-color: #d33;
+  color: #d33;
+  text-decoration: line-through;
 }
+
 div#channel_input > div.info {
- display: none;
- width: calc(100% - 2em);
- font-size: 1em;
- line-height: 1.2em;
- background: rgba(0, 0, 0, 0.7);
- color: #fff;
- padding: 1em;
- transition: 225ms;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  display: none;
+  font-size: 1em;
+  line-height: 1.2em;
+  padding: 1em;
+  transition: 225ms;
+  width: calc(100% - 2em);
 }
-button#load-more{
- display: block;
- margin: .5em auto;
- pading: .5em;
- font-size: 2em;
- border: 1px solid;
- outline: none;
+
+button#load-more {
+  border: 1px solid;
+  display: block;
+  font-size: 2em;
+  margin: .5em auto;
+  outline: none;
+  padding: .5em;
 }
+
 @media screen and (orientation: portrait) {
  #yt_player {
+   height: 40vh;
 	 width: 100%;
-	 height: 40vh;
  }
+
  #yt_list {   // DO NOT DEFINE A WIDTH HERE OR BAD THINGS WILL HAPPEN
+   bottom: 0;
+   left: 0;
 	 top: auto;
-	 bottom: 0;
-	 left: 0;
  }
  #yt_list_bb {
-  height: 59vh;
-  width: 800px;
-  top: auto;
   bottom: 0;
+  height: 59vh;
   left: 0;
+  top: auto;
+  width: 800px;
  }
+
  .item {
  }
 }
