--- a/assets/scss/4-layout/_header.scss
+++ b/assets/scss/4-layout/_header.scss
@@ -7,7 +7,7 @@ header.masthead {
   -o-background-size: 95% auto;
   -webkit-background-size: 95% auto;
   background-size: 95% auto;
-  color: #fff;
+  color: $white;
   margin-top: 140px; // margin-top for clearing the sticky nav
   padding-left: 20px;
   text-align: center;
