--- a/assets/scss/0-tools/_vars.scss
+++ b/assets/scss/0-tools/_vars.scss
@@ -1,8 +1,13 @@
+//  TO USE GOOGLE FONTS FOR SITE:
+//==============================================
 //fall back font stack for site
-$basefont-stack: Arial, "Helvetica Neue", Helvetica, sans-serif;
-$base-font-size: 17px;
-$secondaryfont-stack: 'nexa_rust_slabblack_shadow_01';
-$thirdfont-stack: 'ArtBrush Medium';
+$basefont-stack: 'Open Sans', sans-serif;
+$base-font-size: 1em;
+//secondary font stack for site
+$secondaryfont-stack: 'Roboto', sans-serif;
+$secondaryfont-weight-regular: 400;
+$secondaryfont-weight-bold: 700;
+$secondaryfont-weight-black: 900;
 
 //Image path for most of global style sheet
 $imagedir:'/assets/img/';
@@ -12,37 +17,31 @@ $primary-blue: #0f3b63;       // Dark blue
 $primary-red: #c61f48;        // Dark red
 $accent-blue: #005bac;        // Blue used in all links and link buttons;
 $accent-blue-bright: #227dce; // Blue used in all links hovers and link hovers buttons;
-$accent-brown: #80561b;
 $accent-light-blue: #95a9ca;
-$accent-olive-green: #8d8b00; // Green used in search
-$accent-purple: #8d2187;
 
-$bgcolor: #fff;               // White backgrounds
+$white: #fff;
+$black: #000;
 
-//Colors from the Fast Path print document
-$fp-emerald: #148ba9;          // Emerald-green used in Fast Path print document as heading background and accent color
-$fp-orange: #eeab34;           // Orange for "Maximum Students" text warning
-$fp-burgandy: #9d2d60;         // Burgandy for heading on why-fastpath.html page
-$fp-green: #95b246;            // Green for heading on why-fastpath.html page
+$bgcolor: $white;               // White backgrounds
 
-$whitefont: #fff;           // Color of font that is on a dark background color/image
+$whitefont: $white;           // Color of font that is on a dark background color/image
 $gradient-btm: #2798ff;        // Bottom blue color for gradient
 $light-visited: #9fbfff;       // Light link color for visited links against dark background Colors
-$hlf-border: #000;            // Half border color for .half-border h2 elements on why-fastpath page.
+$hlf-border: $black;            // Half border color for .half-border h2 elements on why-fastpath page.
 
-$menuh2: #fff;                // Full-menu overlay heading links color
-$link-text: #0f3b63;
-$button-color: #0f3b63;
-$btn-hover: #005bac;
-$btn-visited: #fff;
+$menuh2: $white;                // Full-menu overlay heading links color
+$link-text: $primary-blue;
+$button-color: $primary-blue;
+$btn-hover: $accent-blue;
+$btn-visited: $white;
 $landing-bg: #e5e8ed;        // Landing page's background-color
-$default-bg: #fff;        // Background color for non-landing pages
-$footer-bg: #fff;         // Footer's background color
+$default-bg: $white;        // Background color for non-landing pages
+$footer-bg: $white;         // Footer's background color
 $grey-heading: #666;      // Grey headings used within page content
 $fa-color: $primary-red;
-$slide-bg: #fff;            // Background color for the upcoming games slick slides
-$sub-nav-heading: #fff;     // Font color for h1.page-heading heading of sub-nav
-$nav-link: #fff;            // Color for nav-link-main links in mega-nav
+$slide-bg: $white;            // Background color for the upcoming games slick slides
+$sub-nav-heading: $white;     // Font color for h1.page-heading heading of sub-nav
+$nav-link: $white;            // Color for nav-link-main links in mega-nav
 
 body.landing {
   background-color: $landing-bg;
