--- a/assets/scss/1-base/_links.scss
+++ b/assets/scss/1-base/_links.scss
@@ -1,8 +1,8 @@
 .blue-link {
   color: $primary-blue;
-  font-family: 'Roboto', sans-serif;
+  font-family: $secondaryfont-stack;
   font-size: 1.1em;
-  font-weight: 700;
+  font-weight: $secondaryfont-weight-bold;
 }
 
 .blue-link:hover {
