--- a/assets/scss/5-pages/index/_home.scss
+++ b/assets/scss/5-pages/index/_home.scss
@@ -3,6 +3,10 @@
   margin-top: 40px;
 }
 
+.icon-middle {
+  vertical-align: middle;
+}
+
 .card-header {
   background-color: $primary-red;
   border-top-left-radius: 10px !important;
@@ -10,7 +14,7 @@
 }
 
 .card {
-  border-radius: 10px 10px;
+  border-radius: 10px;
 }
 
 .scroll-table {
@@ -31,20 +35,12 @@
   padding-left: 20px;
 }
 
-.icon-middle {
-  vertical-align: middle;
-}
-
 .news-scroll {
-  background-color: #fff;
+  background-color: $white;
   height: 488px;
   margin-right: -15px;
   max-height: 488px;
   overflow-y: scroll;
-}
-
-.yt-button {
-  margin-left: 15px;
 }
 
 .news-thumb {
@@ -57,6 +53,10 @@
 
 .no-bullet {
   list-style-type: none;
+}
+
+.yt-button {
+  margin-left: 15px;
 }
 
 .inline-thumb {
