--- a/assets/scss/5-pages/index/_videos.scss
+++ b/assets/scss/5-pages/index/_videos.scss
@@ -59,7 +59,7 @@
 }
 
 .item {
-  background: #fff;
+  background: $white;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   float: left;
   height: auto;
@@ -109,7 +109,7 @@ div#channel_input > input#user_name.error {
 
 div#channel_input > div.info {
   background: rgba(0, 0, 0, 0.7);
-  color: #fff;
+  color: $white;
   display: none;
   font-size: 1em;
   line-height: 1.2em;
