--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -1,10 +1,10 @@
-/* Font Awesome */
-/*!
- *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
- *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
- */
-/* FONT PATH
- * -------------------------- */
+// Font Awesome
+//!
+//  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
+//  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
+//
+// FONT PATH
+// --------------------------
 @font-face {
   font-family: 'FontAwesome';
   src: url("../../assets/fonts/FontAwesome/fontawesome-webfont.eot");
@@ -20,7 +20,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
-/* makes the font 33% larger relative to the icon container */
+// makes the font 33% larger relative to the icon container */
 .fa-lg {
   font-size: 1.33333em;
   line-height: 0.75em;
@@ -75,7 +75,7 @@
 .fa.fa-pull-right {
   margin-left: .3em; }
 
-/* Deprecated as of 4.4.0 */
+// Deprecated as of 4.4.0
 .pull-right {
   float: right; }
 
@@ -153,10 +153,10 @@
   font-size: 2em; }
 
 .fa-inverse {
-  color: #fff; }
+  color: $white; }
 
-/* Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
-   readers do not read off random characters that represent icons */
+// Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
+//   readers do not read off random characters that represent icons
 .fa-glass:before {
   content: ""; }
 
