--- a/assets/scss/0-tools/_vars.scss
+++ b/assets/scss/0-tools/_vars.scss
@@ -13,31 +13,20 @@ $secondaryfont-weight-black: 900;
 $imagedir:'/assets/img/';
 
 //KCC colors
-$primary-blue: #0f3b63;       // Dark blue
-$primary-red: #c61f48;        // Dark red
-$accent-blue: #005bac;        // Blue used in all links and link buttons;
-$accent-blue-bright: #227dce; // Blue used in all links hovers and link hovers buttons;
-$accent-light-blue: #95a9ca;
+$primary-blue: #0f3b63;       // Primary red-color
+$primary-red: #c61f48;        // Primary blue-color
+$accent-blue: #005bac;        // Accent blue-color used in all links and link buttons;
 
-$white: #fff;
 $black: #000;
+$grey-1: #666;
+$grey-2: #e5e8ed;
+$white: #fff;
 
-$bgcolor: $white;               // White backgrounds
 
-$whitefont: $white;           // Color of font that is on a dark background color/image
-$gradient-btm: #2798ff;        // Bottom blue color for gradient
-$light-visited: #9fbfff;       // Light link color for visited links against dark background Colors
-$hlf-border: $black;            // Half border color for .half-border h2 elements on why-fastpath page.
-
-$menuh2: $white;                // Full-menu overlay heading links color
-$link-text: $primary-blue;
-$button-color: $primary-blue;
-$btn-hover: $accent-blue;
-$btn-visited: $white;
-$landing-bg: #e5e8ed;        // Landing page's background-color
+$landing-bg: $grey-2;        // Landing page's background-color
 $default-bg: $white;        // Background color for non-landing pages
 $footer-bg: $white;         // Footer's background color
-$grey-heading: #666;      // Grey headings used within page content
+$grey-heading: $grey-1;      // Grey headings used within page content
 $fa-color: $primary-red;
 $slide-bg: $white;            // Background color for the upcoming games slick slides
 $sub-nav-heading: $white;     // Font color for h1.page-heading heading of sub-nav
