Add font-weight variable for semi bold

--- a/assets/scss/0-tools/_vars.scss
+++ b/assets/scss/0-tools/_vars.scss
@@ -6,6 +6,7 @@ $base-font-size: 1em;
 //secondary font stack for site
 $secondaryfont-stack: 'Roboto', sans-serif;
 $secondaryfont-weight-regular: 400;
+$secondaryfont-weight-boldish: 500;
 $secondaryfont-weight-bold: 700;
 $secondaryfont-weight-black: 900;
 
