Create news link style to overide text decoration on hover

--- a/assets/scss/1-base/_links.scss
+++ b/assets/scss/1-base/_links.scss
@@ -13,3 +13,7 @@
 .schedule-link {
   margin-left: -20px;
 }
+
+.news__link {
+  text-decoration: none !important; // IMPORTANT NEEDED TO PREVENT UNDERLINE ON LINK HOVER
+}
