Create _news.scss module for News rollup styles
Add include in main.scss for _news.scss

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -15,6 +15,7 @@
 @import '3-modules/sub-nav';
 @import '3-modules/roster';
 @import '3-modules/schedule-page';
+@import '3-modules/news';
 
 // Layout items
 // @import "4-layout/header";
