Add image to news post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: page
         <p>Date:
         <!--Article Date-->
         {{ page.date | date: "%m/%d/%Y" }}</p>
-
+        <img src="{{page.baseurl}}assets/img/placeholder.png" class="img-fluid editable" alt="">
         <div class="editable">
         {{ content }}
         </div>
