Add rule to make slick's slides line up to left side ...
When there is less than 3 slides the slides will align to the left
of slicks track. Done via css overide of .slick-track {margin-left:auto}
Set rule to .slick-track{margin-left:0}

--- a/assets/scss/3-modules/_sliders.scss
+++ b/assets/scss/3-modules/_sliders.scss
@@ -190,3 +190,7 @@
 .slick-initialized {   // makes slides visible again once slick has initialized
   visibility: visible;
 }
+
+.slick-track {
+  margin-left: 0;
+}
