--- a/assets/scss/3-modules/_news.scss
+++ b/assets/scss/3-modules/_news.scss
@@ -32,9 +32,10 @@
 
 .news__scroll {
   background-color: $white;
-  height: 488px;
+  height: 495px;
   margin-right: -15px;
-  max-height: 488px;
+  margin-top: -13px;
+  max-height: 495px;
   overflow-y: scroll;
 }
 
@@ -45,4 +46,10 @@
 
 .news__date {
   text-transform: none;
+}
+
+.news__modal-thumb {
+  margin-bottom: 10px;
+  margin-right: 10px;
+  max-width: 200px;
 }
