Updated '_includes/support-nav.html' via CloudCannon

--- a/_includes/support-nav.html
+++ b/_includes/support-nav.html
@@ -11,7 +11,7 @@
           <a href="{{page.baseurl}}/{{page.base}}/student-athletes" class="nav-link sub-nav-link">Cash Bash</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/equity" class="nav-link sub-nav-link">Cavalier Classic Golf Outing</a>
+          <a href="{{page.baseurl}}/{{page.base}}/equity" class="nav-link sub-nav-link">Cavalier Club</a>
         </li>
       </ul>
     </div>
