Change al Cavaliers Classic links to Cavalier Club

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -251,7 +251,7 @@
               <li class="nav-list">
                 <div class="row nav-row">
                   <div class="col-md-12">
-                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/support/cavalier-classic"><strong>Cavalier Classic Golf Outing</strong></a>
+                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/support/cavalier-club"><strong>Cavalier Club</strong></a>
                   </div>
                 </div>
               </li>
