Add grey-3 var for slick slide background color

--- a/assets/scss/0-tools/_vars.scss
+++ b/assets/scss/0-tools/_vars.scss
@@ -21,6 +21,7 @@ $accent-blue: #005bac;        // Accent blue-color used in all links and link bu
 $black: #000;
 $grey-1: #666;
 $grey-2: #e5e8ed;
+$grey-3: #f1f2f7;            //  Background color for slick tracks
 $white: #fff;
 
 
