--- a/assets/scss/3-modules/_schedule.scss
+++ b/assets/scss/3-modules/_schedule.scss
@@ -3,8 +3,9 @@
 }
 
 .games {
-  // background-color: $white;
+  background: $grey-3;
   display: block;
+  height: 160px;
   margin: 0 auto;
   width: 100%;
 }
@@ -14,11 +15,22 @@
   margin: 10px;
 }
 
+
+.schedule-carousel__title {
+  color: $primary-red;
+  font-family: $secondaryfont-stack;
+  font-size: 1.6rem;
+  font-weight: $secondaryfont-weight-bold;
+  padding-top: 10px;
+}
+
 .schedule-carousel__sport {
   border-bottom: 1px solid #666673;
   color: #666673;
   font-size: 15px;
   font-weight: bold;
+  margin-bottom: 3px;
+  margin-top: 3px;
   max-width: 60%;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -34,7 +46,7 @@
   background-color: $primary-blue;
   color: $white;
   float: left;
-  height: 120px;
+  height: 140px;
   line-height: 1;
   margin-right: 10px;
   padding: 5px;
@@ -46,7 +58,7 @@
   background-color: $primary-red;
   color: $white;
   float: left;
-  height: 120px;
+  height: 140px;
   line-height: 1;
   margin-right: 10px;
   padding: 5px;
@@ -55,10 +67,20 @@
 }
 
 .schedule-carousel__date-month {
-  font-size: 1.1em;
+  font-size: .9em;
   margin-bottom: 0;
+  text-transform: uppercase;
 }
 
 .schedule-carousel__date-day {
+  font-family: $secondaryfont-stack;
   font-size: 2em;
+  font-weight: $secondaryfont-weight-boldish;
+}
+
+.schedule-carousel__time {
+  color: $primary-red;
+  font-family: $secondaryfont-stack;
+  font-weight: $secondaryfont-weight-boldish;
+  text-transform: lowercase;
 }
