Assign video-carousel__title color as $primary-red

--- a/assets/scss/5-pages/index/_videos.scss
+++ b/assets/scss/5-pages/index/_videos.scss
@@ -94,7 +94,7 @@
 }
 
 .video-carousel__title {
-  color: #c61f48;
+  color: $primary-red;
   font-size: 17px;
   font-weight: bold;
   padding-top: 10px;
