--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -16,6 +16,7 @@
 @import '3-modules/roster';
 @import '3-modules/schedule-page';
 @import '3-modules/news';
+@import '3-modules/schedule';
 
 // Layout items
 // @import "4-layout/header";
@@ -25,7 +26,6 @@
 // Page specific styling
 // Home/index page
 @import '5-pages/index/home';
-@import '5-pages/index/schedule';
 @import '5-pages/index/videos';
 
 // Sports page
