Create sticky table header for schedule pages

--- a/_includes/schedule-table.html
+++ b/_includes/schedule-table.html
@@ -5,7 +5,7 @@
         <div class="table-responsive">
           <table class="table table-striped table-hover">
             <caption>Table caption</caption>
-            <thead>
+            <thead class="schedule-pages__table-header">
             <th scope="col">Date</th>
             <th scope="col">Opponent</th>
             <th scope="col" class="text-right" style="paddding-right:10px;">Time</th>
