--- a/_layouts/schedule-page.html
+++ b/_layouts/schedule-page.html
@@ -8,4 +8,6 @@
   {% include vendor-scripts.html %}
   {% include schedule-page-script.html %}
   <script src="{{page.baseurl}}assets/js/lazyLoadOnly.js"></script>
+  <script src="{{page.baseurl}}assets/js/stickyTableHeader.js"></script>
+  <script src="{{page.baseurl}}assets/js/stickyTableCustom.js"></script>
 {% include foot.html %}
