Fix double // in url links of sub-nav
Links were still working but it may have cause issues in the future

--- a/_includes/sub-nav.html
+++ b/_includes/sub-nav.html
@@ -8,16 +8,16 @@
     <div class="col-md-6">
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/news" class="nav-link sub-nav-link">News</a>
+          <a href="{{page.baseurl}}{{page.base}}/news" class="nav-link sub-nav-link">News</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/schedule" class="nav-link sub-nav-link">Schedule</a>
+          <a href="{{page.baseurl}}{{page.base}}/schedule" class="nav-link sub-nav-link">Schedule</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/roster" class="nav-link sub-nav-link">Roster</a>
+          <a href="{{page.baseurl}}{{page.base}}/roster" class="nav-link sub-nav-link">Roster</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/stats" class="nav-link sub-nav-link">Stats</a>
+          <a href="{{page.baseurl}}{{page.base}}/stats" class="nav-link sub-nav-link">Stats</a>
         </li>
       </ul>
     </div>
