Create _alert.scss for alert styles

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -17,6 +17,7 @@
 @import '3-modules/schedule-page';
 @import '3-modules/news';
 @import '3-modules/schedule';
+@import '3-modules/alert';
 
 // Layout items
 // @import "4-layout/header";
