--- a/assets/scss/1-base/_links.scss
+++ b/assets/scss/1-base/_links.scss
@@ -28,3 +28,23 @@
 // Change the news headings color to blue when hovering any part of the news item
   color: $primary-blue;
 }
+
+// link__offset class used to offset anchor jump-links via CSS only method
+// Links need offseting to compensate for fixed nav menu
+// ===========================================================================================
+.link__offset::before {
+  // mobile devices get slightly different offset w/ different sized fixed header
+  content: " ";
+  display: block;
+  height: 371px; // defining a height increases the size
+  margin-top: -371px; // negative margin offsets hight to pull it back down
+  pointer-events: none;
+  visibility: hidden;
+}
+
+@media screen and (min-width: 768px) {
+    .link__offset::before {
+      height: 271px;
+      margin-top: -271px;
+  }
+}
