--- a/_includes/about-nav.html
+++ b/_includes/about-nav.html
@@ -8,16 +8,16 @@
     <div class="col-md-8">
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/student-athletes" class="nav-link sub-nav-link">Student-Athlete Experience</a>
+          <a href="{{page.baseurl}}{{page.base}}/student-athletes" class="nav-link sub-nav-link">Student-Athlete Experience</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/equity" class="nav-link sub-nav-link">Equity in Athletics</a>
+          <a href="{{page.baseurl}}{{page.base}}/equity" class="nav-link sub-nav-link">Equity in Athletics</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/staff" class="nav-link sub-nav-link">Staff Directory</a>
+          <a href="{{page.baseurl}}{{page.base}}/staff" class="nav-link sub-nav-link">Staff Directory</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/survey" class="nav-link sub-nav-link">Alumni Survey</a>
+          <a href="{{page.baseurl}}{{page.base}}/survey" class="nav-link sub-nav-link">Alumni Survey</a>
         </li>
       </ul>
     </div>
