--- a/_includes/sub-nav.html
+++ b/_includes/sub-nav.html
@@ -19,6 +19,9 @@
         <li class="nav-item">
           <a href="{{page.baseurl}}{{page.base}}/stats" class="nav-link sub-nav-link">Stats</a>
         </li>
+        <li class="nav-item">
+          <a href="{{page.baseurl}}{{page.base}}#coaches" class="nav-link sub-nav-link">Coaches</a>
+        </li>
       </ul>
     </div>
   </div>
