Attempt to fix cavalier logo display on movile iOS devices
Trying to move white cavaliers logo down into viewport on mobile iOS devices (iPhones)

--- a/assets/scss/3-modules/_mega-nav.scss
+++ b/assets/scss/3-modules/_mega-nav.scss
@@ -245,3 +245,10 @@
 .recruit-pad {
   padding-top: 20px;
 }
+
+@supports (-webkit-overflow-scrolling: touch) and (max-width: 414px) {
+  // CSS specific to iOS devices
+  .center-logo {
+    margin-top: -55px;
+  }
+}
