Delete orphan .cavs-logo selector and styles

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -3,7 +3,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a href="{{page.baseurl}}"><img src="{{page.baseurl}}assets/img/cavaliers-logo.png" class="center-logo d-none d-lg-inline" alt="KCC Cavaliers logo link to main athletics page"><img src="{{page.baseurl}}assets/img/cavaliers-logo_white.png" class="center-logo d-xs-inline d-lg-none" alt="KCC Cavaliers logo link to main athletics page"></a>
+    <a href="{{page.baseurl}}"><img src="{{page.baseurl}}assets/img/cavaliers-logo.png" class="center-logo d-none d-lg-inline" alt="KCC Cavaliers logo link to main athletics page"></a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mx-auto">
         <!--  Sports  -->
