Fix cav's logo displaying outside of viewport in iOS devices.
Move cavs logo into global-nav on mobile devices

--- a/_includes/global-nav.html
+++ b/_includes/global-nav.html
@@ -8,13 +8,14 @@
     </div>
   </div>  -->
   <div class="row">
-    <div class="col-sm-6">
+    <div class="col-xs-6">
       <a class="clickable" href="http://www.kcc.edu"><img src="{{page.baseurl}}assets/img/kankakee-community-college-word-logo.svg" class="img-fluid kcc-logo" alt="Kankakee Community College link to home page"></a>
       <!--  <form class="form-inline">
         <input class="form-control mr-sm-2 local-search" type="search" placeholder="&#xF002; Search Athletics" aria-label="Search">
       </form>  -->
     </div>
-    <div class="col-sm-6 text-right">
+    <div class="col-xs-6 text-right">
+      <a href="{{page.baseurl}}"><img src="{{page.baseurl}}assets/img/cavaliers-logo_white.png" class="center-logo d-xs-inline d-lg-none" alt="KCC Cavaliers logo link to main athletics page"></a>
       <!-- Doesn't work yet
       <a id="searchButton" class="search" data-toggle="collapse" data-target="#search" aria-expanded="false" aria-controls="search"><i class="fas fa-search text-white"></i></a>  -->
     </div>
