Fix cav logo outside viewport on large devices ...
Was missed from fixing mobile iOS display of cavs logo:
Set top: value to default (auto) for 992px wide devices and up

--- a/assets/scss/3-modules/_mega-nav.scss
+++ b/assets/scss/3-modules/_mega-nav.scss
@@ -202,6 +202,7 @@
 
 @media screen and (min-width: 992px) {
   .center-logo {
+    top: auto;
     left: 50%; // center the absolutely positioned item
     margin-left: -105px;  // offset the width of the item to make true center
     margin-top: -115px; // position it vertically
