Center YouTube video within its modal

--- a/assets/scss/5-pages/index/_videos.scss
+++ b/assets/scss/5-pages/index/_videos.scss
@@ -164,3 +164,8 @@ button#load-more {
 	 width: calc(100% - 50px);
  }
 }
+
+.yt_player-positioning {
+  margin-left: auto;
+  margin-right: auto;
+}
