--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -1,5 +1,5 @@
 /* Predefined styles available for content editors in CloudCannon */
-h2.content__heading {
+h2.content-heading {
     /* Importants added to test CloudCannon CMS */
   color: #666 !important;
   font-family: "Roboto", sans-serif !important;
