Updated '_includes/mega-nav.html' via CloudCannon

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -186,7 +186,7 @@
                 <li class="nav-list">
                   <div class="row nav-row">
                     <div class="col-md-12">
-                      <a class="nav-link nav-link-main no-pad dark-text" href="https://form.jotform.com/72495899814982"><strong>Men's Basketball From</strong></a>
+                      <a class="nav-link nav-link-main no-pad dark-text" href="https://form.jotform.com/72495899814982"><strong>Men's Basketball Form</strong></a>
                     </div>
                   </div>
                 </li>
