Updated '_layouts/post.html' via CloudCannon

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 ---
+
 <section class="sub-nav-marg">
   <div class="container">
     <div class="row">
@@ -12,7 +13,7 @@ layout: page
         <p>Date:
         <!--Article Date-->
         {{ page.date | date: "%m/%d/%Y" }}</p>
-        <img src="{{page.baseurl}}assets/img/placeholder.png" class="img-fluid editable" alt="">
+        <img class="img-fluid editable" alt="" src="../../../assets/img/placeholder.png" />
         <div class="editable">
         {{ content }}
         </div>
