Add Google Tag Manager to Athletics page layouts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,13 @@
         <!-- YouTube API -->
         <meta name="yt-api-k" value="AIzaSyBpxv9JNl4AX816ScNmZcqHkLncMUeiAws" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-KRL8533');</script>
+        <!-- End Google Tag Manager -->
         <!--  Preload slick font  -->
         <link rel="preload" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/fonts/slick.woff" as="font">
         <!--  https://youtube.com/embed/lirlq5CSEUA?controls=0&showinfo=0&rel=0  -->
