--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,15 @@
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','GTM-KRL8533');</script>
         <!-- End Google Tag Manager -->
+        <script>
+        (function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,"script","//www.google-analytics.com/analytics.js","ga");
+
+        ga("create", "UA-4328282-19", "auto");
+        ga("send", "pageview");
+        </script>
         <!--  Preload slick font  -->
         <link rel="preload" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/fonts/slick.woff" as="font">
         <!--  https://youtube.com/embed/lirlq5CSEUA?controls=0&showinfo=0&rel=0  -->
