--- a/_includes/schedule-table.html
+++ b/_includes/schedule-table.html
@@ -2,9 +2,10 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
+        <div><p>Table Legend. <span style="background-color:#c60b46;color:white;padding:5px">Home games</span>&#160;<span style="background-color:#0f3b63;color:white;padding:5px">Away games</span></p></div>
         <div class="table-responsive">
           <table class="table table-striped table-hover">
-            <caption>Table caption</caption>
+            <caption></caption>
             <thead class="schedule-pages__table-header">
             <th scope="col">Date</th>
             <th scope="col">Opponent</th>
